--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,12 @@ title: Jordan Ye # your name (or website title) here
 logo: "/images/profile.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
+  Hi, I'm Jordan Ye, a business analyst passionate about understanding consumer psychology and leveraging data to drive impactful decisions. My portfolio highlights projects in both data analytics and visualization, reflecting my expertise in:
+  <br><br>
+  Business Analysis
+  Consumer Behaviour
+  Data Visualization
+  Python & Tableau
   <br><br>
   Second description 
   <br><br>
