--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   This website is built with Jekyll and GitHub Pages, using a minimal and modern design for clear project presentation.
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="www.linkedin.com/in/jiajun-ye">View My LinkedIn Profile</a>
+  <a href="https://public.tableau.com/app/profile/jordan.ye2240/vizzes">View My Tableau Profile</a> 
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
